# egi-rs

./: .gitignore  404.html  Cargo.toml  README.md  book.toml  igm-common-errors.html  igm-coords.html  igm-met.html  index.html  installation.html  print.html  run-i2s.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: mdbook.yml
book/: book.toml
book/src/: SUMMARY.md  data-part.md  dir-tree.txt  igm-common-errors.md  igm-coords.md  igm-met.md  installation.md  run-i2s.md
src/: config.rs  coordinates.rs  default_files.rs  i2s_catalog.rs  igm-met.md  lib.rs
src/etc/: em27_i2s.top  em27_windows.gnd  example_em27_extra_filters.json  example_em27_extra_filters.toml  flimit-dual.i2s  flimit-mid-ir.i2s  flimit-single.i2s  post_processing.sh
src/meteorology/: cit_csv.rs  external_script.rs  jpl_vaisala.rs  legacy.rs  mod.rs
src/utils/: daily.rs  mod.rs  pattern_replacement.rs
src/utils/pattern_replacement/: daily.rs  gsetup.rs  met_ext_script.rs
test_inputs/: dummy_met.py
