[package]
name = "egi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
error-stack = "0.4.1"
# TODO: put this static feature behind a similar static feature for this crate
ggg-rs = {path = "../src-rs", features = ["static"]}
itertools = "0.11.0"
once_cell = "1.18.0"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"

[lib]

[[bin]]
name = "em27-catalogue"
