[package]
name = "egi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
colored = "3.0.0"
csv = "1.3.0"
difflib = "0.4.0"
env_logger = "0.10.0"
error-stack = "0.4.1"
# EGI doesn't need the netCDF tools so we can disable the default feature to avoid building
# the netCDF crate
ggg-rs = {path = "../src-rs", default-features = false}
glob = "0.3.1"
inquire = "0.7.5"
itertools = "0.11.0"
log = "0.4.20"
once_cell = "1.18.0"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
toml = "0.8.20"
which = "7.0.2"

[lib]

[[bin]]
name = "em27-init"

[[bin]]
name = "em27-catalogue"

[[bin]]
name = "em27-i2s-prep"

[[bin]]
name = "em27-gfit-prep"
